@@ -1,7 +1,15 @@
-SUBDIRS = src man po
+SUBDIRS = src man scripts po
 packextrasdir=@docdir@
-EXTRA_DIST = 	COPYING README QuickStart INSTALL AUTHORS ChangeLog \
-		ReleaseNotes CONTRIBUTING.md CODE_OF_CONDUCT.md
+EXTRA_DIST = 	\
+	COPYING	\
+	README	\
+	QuickStart	\
+	INSTALL	\
+	AUTHORS	\
+	ChangeLog \
+	ReleaseNotes	\
+	CONTRIBUTING.md	\
+	CODE_OF_CONDUCT.md
 
 packextras_DATA=$(EXTRA_DIST)
 
