@@ -30,5 +30,9 @@ AM_MAINTAINER_MODE
 AC_CONFIG_FILES([	Makefile
 			src/Makefile
 			man/Makefile
+			scripts/Makefile
 			po/Makefile.in])
+
+AC_CONFIG_FILES([scripts/m2k-minicom.sh], [chmod +x scripts/m2k-minicom.sh])
+
 AC_OUTPUT
