@@ -1,0 +1,9 @@
+#!/bin/sh
+
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+bindir=@bindir@
+
+$bindir/modemu2k -e "AT%B0=1%B1=1&W" -c "minicom -l -tansi -con -p %s"
+
+exit $?
