@@ -1,3 +1,5 @@
 v0.0.4
 
 * Fixed --version output
+
+* Added script to invoke minicom: 'm2k-minicom.sh'
