@@ -4,6 +4,8 @@ modemu2k ChangeLog
 
 * Fixed --version output
 
+* Added script to invoke minicom: 'm2k-minicom.sh'
+
 2018-10-17
 
 * v0.0.3 released
